<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/textViewlabelTitle"
        style="@style/LabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="102dp"
        android:text="@string/textTitleLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="4dp"
        android:background="#0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewlabelTitle"

        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textViewTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLabelOriginalTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        style="@style/LabelStyle"
        android:text="@string/TextViewLabelOrginal"
        app:layout_constraintEnd_toStartOf="@+id/textViewOriginalTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewOriginalTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textviewtitleoriginal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />


    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="4dp"
        android:background="#0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitle"

        />


    <TextView
        android:id="@+id/textViewLabelRating"
        android:layout_width="0dp"
        style="@style/LabelStyle"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitle" />

    <TextView
        android:id="@+id/textViewRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textViewRating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitle" />
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="4dp"
        android:background="#0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRating"

        />

    <TextView
        android:id="@+id/textViewLabelRelaeseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/LabelStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/release"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

    <TextView
        android:id="@+id/textViewRelaeseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="136dp"
        android:text="@string/labelrelease"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        style="@style/BorderStyle"
        android:layout_margin="4dp"
        android:background="#0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRelaeseDate"

        />
    <TextView
        android:id="@+id/textViewLabelDescription"
        android:layout_width="0dp"
        style="@style/LabelStyle"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/describtion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRelaeseDate" />
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        style="@style/BorderStyle"
        android:layout_margin="4dp"
        android:background="#0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelDescription"

        />
    <TextView
        android:id="@+id/textViewOverview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autoText="true"
        android:fontFamily="monospace"
        android:text="@string/overview"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelDescription" />
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        style="@style/BorderStyle"
        android:layout_margin="4dp"
        android:background="#0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOverview"
        />
  <!--  <ImageView
        android:id="@+id/imageViewAddToFavourite"
        android:layout_width="@dimen/size_ofstart"
        android:layout_height="@dimen/size_ofstart"
        android:layout_marginEnd="16dp"
        android:contentDescription="imageViewAddToFavourite"
        android:onClick="onClickChangeFavourite"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewBigPoster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBigPoster"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/remove_favourite" />
-->
    <TextView
        android:id="@+id/textViewTr"
        android:layout_width="0dp"
        style="@style/LabelStyle"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autoText="true"
        android:fontFamily="monospace"
        android:text="@string/екфшддукы"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOverview" />

    <View
        style="@style/BorderStyle"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="4dp"
        android:background="#0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTr"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTrailers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTr" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="monospace"
        style="@style/LabelStyle"
        android:text="@string/overviewsss"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewTrailers" />
    <View
        android:layout_width="0dp"
        style="@style/BorderStyle"
        android:layout_height="1dp"
        android:layout_margin="4dp"
        android:background="#0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewReviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>
